compiler-tests/src/test/data/diagnostic/multibindings/IncompatibleMapValueType.ir.diag.txt
/IncompatibleMapValueType.kt:12:28: error: [Metro/MissingBinding] No binding found for Map<String, String>

  FooComponent.value -> Int -> Map<String, String>

  trace (in FooComponent):
      Map<String, String> is injected at FooComponent.provideFoo(…, bar)
      Int is requested at FooComponent.value

  A directly-provided 'Map<String, String>' binding exists, but direct Map bindings cannot satisfy
  'Map<String, Function0<String>>' requests. Provider-, Lazy-, or SuspendProvider-wrapped map values
  (e.g., Map<K, Provider<V>>) only work with a Map multibinding created with `@IntoMap` or
  `@Multibinds`.
      IncompatibleMapValueType.kt:16:16
        @Provides bar: kotlin.collections.Map<kotlin.String, kotlin.String>
                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

  help: ensure Map<String, String> has an @Inject constructor or is provided by an @Provides or
        @Binds declaration visible to FooComponent
  docs: https://zacsweers.github.io/metro/latest/diagnostics/#missingbinding


/IncompatibleMapValueType.kt:25:18: error: [Metro/MissingBinding] No binding found for Map<String, String>

  SuspendFooComponent.value -> Int -> Map<String, String>

  trace (in SuspendFooComponent):
      Map<String, String> is injected at SuspendFooComponent.provideFoo(…, bar)
      Int is requested at SuspendFooComponent.value

  A directly-provided 'Map<String, String>' binding exists, but direct Map bindings cannot satisfy
  'Map<String, SuspendFunction0<String>>' requests. Provider-, Lazy-, or SuspendProvider-wrapped map
  values (e.g., Map<K, Provider<V>>) only work with a Map multibinding created with `@IntoMap` or
  `@Multibinds`.
      IncompatibleMapValueType.kt:29:16
        @Provides bar: kotlin.collections.Map<kotlin.String, kotlin.String>
                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

  help: ensure Map<String, String> has an @Inject constructor or is provided by an @Provides or
        @Binds declaration visible to SuspendFooComponent
  docs: https://zacsweers.github.io/metro/latest/diagnostics/#missingbinding
